// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ec2AutoScalingInstanceRunningScheduler Testing default schedule Should match snapshot: default 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "Ec2AutoScalingInstanceRunningSchedulerSchedulerExecutionRole7672084B": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "scheduler.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": "autoscaling:SetDesiredCapacity",
                  "Effect": "Allow",
                  "Resource": "arn:aws:autoscaling:*:123456789012:autoScalingGroup:*:autoScalingGroupName/*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "ec2-auto-scaling-desired-capacity-policy",
          },
        ],
        "RoleName": "ec2-auto-scaling-instance-running-schedule-ce7ae6a9-exec-role",
      },
      "Type": "AWS::IAM::Role",
    },
    "Ec2AutoScalingInstanceRunningSchedulerStartSchedule84CCB259C47E963F": Object {
      "Properties": Object {
        "Description": "auto start ec2 auto scaling group (example-scaling-group) schedule.",
        "FlexibleTimeWindow": Object {
          "Mode": "OFF",
        },
        "Name": "auto-start-ec2-auto-scaling-instance-84ccb259-schedule",
        "ScheduleExpression": "cron(50 7 ? * MON-FRI *)",
        "ScheduleExpressionTimezone": "UTC",
        "State": "ENABLED",
        "Target": Object {
          "Arn": "arn:aws:scheduler:::aws-sdk:autoscaling:setDesiredCapacity",
          "Input": "{\\"AutoScalingGroupName\\":\\"example-scaling-group\\",\\"DesiredCapacity\\":2}",
          "RetryPolicy": Object {
            "MaximumEventAgeInSeconds": 60,
            "MaximumRetryAttempts": 0,
          },
          "RoleArn": Object {
            "Fn::GetAtt": Array [
              "Ec2AutoScalingInstanceRunningSchedulerSchedulerExecutionRole7672084B",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Scheduler::Schedule",
    },
    "Ec2AutoScalingInstanceRunningSchedulerStopSchedule84CCB25922932086": Object {
      "Properties": Object {
        "Description": "auto stop ec2 auto scaling group (example-scaling-group) schedule.",
        "FlexibleTimeWindow": Object {
          "Mode": "OFF",
        },
        "Name": "auto-stop-ec2-auto-scaling-instance-84ccb259-schedule",
        "ScheduleExpression": "cron(10 21 ? * MON-FRI *)",
        "ScheduleExpressionTimezone": "UTC",
        "State": "ENABLED",
        "Target": Object {
          "Arn": "arn:aws:scheduler:::aws-sdk:autoscaling:setDesiredCapacity",
          "Input": "{\\"AutoScalingGroupName\\":\\"example-scaling-group\\",\\"DesiredCapacity\\":0}",
          "RetryPolicy": Object {
            "MaximumEventAgeInSeconds": 60,
            "MaximumRetryAttempts": 0,
          },
          "RoleArn": Object {
            "Fn::GetAtt": Array [
              "Ec2AutoScalingInstanceRunningSchedulerSchedulerExecutionRole7672084B",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Scheduler::Schedule",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`Ec2AutoScalingInstanceRunningScheduler Testing specify schedule Should match snapshot: specify 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "Ec2AutoScalingInstanceRunningSchedulerSchedulerExecutionRole7672084B": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "scheduler.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": "autoscaling:SetDesiredCapacity",
                  "Effect": "Allow",
                  "Resource": "arn:aws:autoscaling:*:123456789012:autoScalingGroup:*:autoScalingGroupName/*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "ec2-auto-scaling-desired-capacity-policy",
          },
        ],
        "RoleName": "ec2-auto-scaling-instance-running-schedule-ce7ae6a9-exec-role",
      },
      "Type": "AWS::IAM::Role",
    },
    "Ec2AutoScalingInstanceRunningSchedulerStartSchedule84CCB259C47E963F": Object {
      "Properties": Object {
        "Description": "auto start ec2 auto scaling group (example-scaling-group) schedule.",
        "FlexibleTimeWindow": Object {
          "Mode": "OFF",
        },
        "Name": "auto-start-ec2-auto-scaling-instance-84ccb259-schedule",
        "ScheduleExpression": "cron(55 8 ? * MON-FRI *)",
        "ScheduleExpressionTimezone": "Asia/Tokyo",
        "State": "ENABLED",
        "Target": Object {
          "Arn": "arn:aws:scheduler:::aws-sdk:autoscaling:setDesiredCapacity",
          "Input": "{\\"AutoScalingGroupName\\":\\"example-scaling-group\\",\\"DesiredCapacity\\":2}",
          "RetryPolicy": Object {
            "MaximumEventAgeInSeconds": 60,
            "MaximumRetryAttempts": 0,
          },
          "RoleArn": Object {
            "Fn::GetAtt": Array [
              "Ec2AutoScalingInstanceRunningSchedulerSchedulerExecutionRole7672084B",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Scheduler::Schedule",
    },
    "Ec2AutoScalingInstanceRunningSchedulerStopSchedule84CCB25922932086": Object {
      "Properties": Object {
        "Description": "auto stop ec2 auto scaling group (example-scaling-group) schedule.",
        "FlexibleTimeWindow": Object {
          "Mode": "OFF",
        },
        "Name": "auto-stop-ec2-auto-scaling-instance-84ccb259-schedule",
        "ScheduleExpression": "cron(5 19 ? * MON-FRI *)",
        "ScheduleExpressionTimezone": "Asia/Tokyo",
        "State": "ENABLED",
        "Target": Object {
          "Arn": "arn:aws:scheduler:::aws-sdk:autoscaling:setDesiredCapacity",
          "Input": "{\\"AutoScalingGroupName\\":\\"example-scaling-group\\",\\"DesiredCapacity\\":0}",
          "RetryPolicy": Object {
            "MaximumEventAgeInSeconds": 60,
            "MaximumRetryAttempts": 0,
          },
          "RoleArn": Object {
            "Fn::GetAtt": Array [
              "Ec2AutoScalingInstanceRunningSchedulerSchedulerExecutionRole7672084B",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Scheduler::Schedule",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
